LPS-60232 Setup overflow style to avoid data span out of portlet

--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-web/src/main/resources/META-INF/resources/css/main.scss
@@ -11,6 +11,10 @@
 		}
 	}
 
+	.view-records-container {
+		overflow: auto;
+	}
+
 	.form-group.geolocation-field .button-holder .btn {
 		margin-top: 0;
 	}
